--- a/templates/portfolio_v2/header.html
+++ b/templates/portfolio_v2/header.html
@@ -23,7 +23,7 @@
                 <div class="item active">
                     <div class="page-header "
                          style="background-image: url({{ profile.profilePicsImageURL }});padding: 0px !important;margin-bottom: 0px !important;">
-                        <section class="my_background_color">
+                        <section class="my_background_color" style="min-height: 70vh!important;">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-6 text-left">
@@ -43,7 +43,7 @@
                 <div class="item   ">
                     <div class="page-header "
                          style="background-image: url({{ profile.profilePicsImageURL }});padding: 0px !important;margin-bottom: 0px !important;">
-                        <section class="my_background_color">
+                        <section class="my_background_color" style="min-height: 70vh!important;">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-6 text-left">
