--- a/templates/main/blog/blog_detail.html
+++ b/templates/main/blog/blog_detail.html
@@ -31,7 +31,10 @@
                                             <div class="blog-tags" style="margin:0px !important;">
                                                 <h4 class="font-weight-bolder">
                                                     Share:
-                                                    <a href="#pablo" class="btn btn-google btn-round btn-sm pull-right">
+                                                    <a >
+Share on Facebook
+</a>
+                                                    <a  class="btn btn-google btn-round btn-sm pull-right">
                                                         <i class="fa fa-google"></i>
                                                     </a>
                                                     <a href="#pablo"
