--- a/templates/portfolio_v2/services.html
+++ b/templates/portfolio_v2/services.html
@@ -1,21 +1,19 @@
 {% load static %}
+<div class="dark_background">
 <section class="services_height "
          style="background-image: url('{{ profile.backgroundImageURL }}');background-attachment: fixed ">
-    <section class="service_background ">
-        <div class="container">
+    <section class="dark_background " style="background-size: cover;min-height: 50vh">
+        <div class=" container">
             <div class="row">
                 <div class="col">
-                    <h1 class="display-3 font-italic"
-                        style="{% if layout.background_color == 'light' %} color: {{ layout.secondary_color }}!important;
-                        {% elif layout.background_color == 'dark' %} color: white;
-                        {% endif %}">Service </h1>
+                    <h1 class="display-3 font-italic">Service </h1>
                 </div>
             </div>
 
             <div class="row " style="">
                 {% for item in service.all %}
-                    <div class="col-md-6 col-sm-6 col-xs-12 " style="">
-                        <div class="" style="background-color: #d4cece;border-radius: 15%">
+                    <div class=" col-md-6 col-sm-6 col-xs-12 " style="">
+                        <div class="dark_background" style="border-radius: 15%">
                             <div class="image-responsive">
                                 <img class="my_service_image" src="{{ item.imageURL }}" alt="{{ item.name }}">
                             </div>
@@ -35,7 +33,4 @@
 
     </section>
 </section>
-{% if profile.background_color == 'light' %}
-<hr class="p-0" style="background-color: {{ layout.primary_color }} ;height: 3px;margin: 0px;padding: 0px">
-
-{% endif %}
+</div>
